tests/ui/hygiene/globs.stderr
error[E0425]: cannot find function `f` in this scope
  --> $DIR/globs.rs:22:9
   |
LL |     pub fn g() {}
   |     ---------- similarly named function `g` defined here
...
LL |         f();
   |         ^
   |
help: a function with a similar name exists
   |
LL |         g();
   |         ~
help: consider importing this function
   |
LL + use foo::f;
   |

error[E0425]: cannot find function `g` in this scope
  --> $DIR/globs.rs:15:5
   |
LL |       pub fn f() {}
   |       ---------- similarly named function `f` defined here
...
LL | / macro m($($t:tt)*) {
LL | |     $($t)*
LL | |     use foo::*;
LL | |     f();
LL | |     g();
   | |     ^
LL | | }
   | |_- in this expansion of `m!`
...
LL | /     m! {
LL | |         use bar::*;
LL | |         g();
LL | |         f();
LL | |     }
   | |_____- in this macro invocation
   |
help: a function with a similar name exists
   |
LL |     f();
   |     ~
help: consider importing this function
   |
LL + use bar::g;
   |

error[E0425]: cannot find function `f` in this scope
  --> $DIR/globs.rs:61:12
   |
LL |   n!(f);
   |   ----- in this macro invocation
LL | / macro n($i:ident) {
LL | |     mod foo {
LL | |         pub fn $i() -> u32 { 0 }
LL | |         pub fn f() {}
...  |
LL | |         n!(f);
   | |            ^ not found in this scope
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `n!`
   |
   = help: consider importing this function:
           foo::f

error[E0425]: cannot find function `f` in this scope
  --> $DIR/globs.rs:65:17
   |
LL |   n!(f);
   |   ----- in this macro invocation
LL | / macro n($i:ident) {
LL | |     mod foo {
LL | |         pub fn $i() -> u32 { 0 }
LL | |         pub fn f() {}
...  |
LL | |                 f
   | |                 ^ not found in this scope
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `n!`
   |
   = help: consider importing this function:
           foo::f

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.
